fixed issue with nav <ul> animation at toggle on mobile, also changed header bakcgrounds to have graidents and changed their styling for mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -61,15 +61,7 @@ nav {
     color: white;
 }
 
-.parallax h1 {
-    text-align: center;
-    color: white;
-    padding-top: 200px;
-    padding-bottom: 200px;
-    margin: 0px;
-}
-
-#bio { 
+.bioParallax { 
     /* The image used */
     background-image: url("images/compressed/selfieBW2.jpg");
 
@@ -84,9 +76,22 @@ nav {
     background-size: cover;
 }
 
+.mobileHeaders {
+
+    background-color: #222222;
+    width: 100%;
+    height: 100%;
+
+}
+
 
  #bioHeader, #portHeader {
     background: linear-gradient(to right, rgba(255,0,0,0), #9f6379);
+    text-align: center;
+    color: white;
+    padding-top: 200px;
+    padding-bottom: 200px;
+    margin: 0px;
 }
 
 .bioSection {
@@ -103,7 +108,15 @@ nav {
     margin: auto;
 }
 
-#portfolio { 
+#faceShot {
+    display: none;
+    border-radius: 50%;
+    max-width: 200px;
+    height: auto;
+    margin: 20px auto 20px auto;
+}
+
+.portParallax { 
     /* The image used */
     background-image: url("images/compressed/dino2.jpg");
 
